--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="Style.css">
         <title>Vocabulary teacher</title>
+        <style>
+            body {
+                background-color: lightblue;
+            }
+        </style>
     </head>
     <body>
         <p>{{voc}}</p>
@@ -10,5 +14,6 @@
             <input name="eingabe"/>
             <button type="submit">Submit</button>
         </form>
+        <a href="lernen.html">FGHGHGHHF</a>
     </body>
 </html>
