Basics are working

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Vocabulary teacher</title>
+        <title> Vokabel trainer</title>
     </head>
     <body>
-        <p>{{voc}}</p>
-        <form method=POST , action=/>
-            <input name="eingabe"/>
-            <button type="submit">Submit</button>
-        </form>
+        <a href=/learn ><button>Learn</button></a>
+        <a href="/add"><button>Add vocabularys</button></a>
     </body>
 </html>
