--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title> Vokabel trainer</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='Style.css') }}">
     </head>
     <body>
         <a href=/learn ><button>Learn</button></a>
@@ -14,11 +15,6 @@
         </style>
     </head>
     <body>
-        <p>{{voc}}</p>
-        <form method=POST , action=/>
-            <input name="eingabe"/>
-            <button type="submit">Submit</button>
-        </form>
         <a href="lernen.html">FGHGHGHHF</a>
     </body>
 </html>
