--- a/templates/learn.html
+++ b/templates/learn.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Vocabulary teacher</title>
-    </head>
-    <body>
-        <p>{{voc}}</p>
-        <form method=POST , action=/learn >
-            <input name="eingabe"/>
-            <button type="submit">Submit</button>
-        </form>
-        <p>{{richtig}}</p>
-    </body>
+
+<head>
+    <title>Vocabulary teacher</title>
+</head>
+
+<body>
+    <p>{{voc}}</p>
+    <form method=POST , action=/learn>
+        <input name="eingabe" />
+        <button type="submit">Submit</button>
+    </form>
+    <p>{{richtig}} {{accuracy}}</p>
+</body>
+
 </html>
